Prevent the primary hero image from changing its size on smaller screens

--- a/src/amo/components/HeroRecommendation/styles.scss
+++ b/src/amo/components/HeroRecommendation/styles.scss
@@ -43,6 +43,7 @@
 
 .HeroRecommendation-info {
   display: flex;
+  flex: 1 1 0px;
   flex-direction: column;
 
   @include respond-to(medium) {
@@ -51,10 +52,20 @@
 
   @include respond-to(extraLarge) {
     @include margin-start(96px);
+
+    flex: 1;
   }
 
   @include respond-to(extraExtraLarge) {
     @include margin-start(132px);
+  }
+}
+
+.HeroRecommendation-image-container {
+  flex: 1 1 0px;
+
+  @include respond-to(extraLarge) {
+    flex: 0 1 auto;
   }
 }
 
